Changed TS target to ES6. Added rimraf and madge to dev dependencies. Now cleans parcel output before starting a new dev server.

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,17 +1,21 @@
 {
-  "root": true,
-  "parser": "@typescript-eslint/parser",
-  "plugins": [
-    "@typescript-eslint"
-  ],
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended"
-  ],
-  "ignorePatterns": [
-    ".cache/**",
-    "dist/**",
-    "node_modules/**"
-  ]
+    "root": true,
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+        "@typescript-eslint"
+    ],
+    "extends": [
+        "eslint:recommended",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended"
+    ],
+    "ignorePatterns": [
+        ".cache/**",
+        "dist/**",
+        "node_modules/**"
+    ],
+    "rules": {
+        "@typescript-eslint/no-unused-vars": "warn",
+        "no-unused-vars": "warn",
+    }
 }
